refact : storeController 파일 저장 책임 분리